* (bug 9332) Fix instructions in tests/README

== MediaWiki API changes since 1.10 ==

(For ongoing development discussion, see http://www.mediawiki.org/wiki/API)

* New properties: links, templates, images, langlinks, categories, external links
* Breaking Change: imagelinks renamed into imageusage (il->iu)
* Bug fix: incorrect generator behavior in some cases
* Login module disabled until a more secure solution can be implemented
* (bug 9938) Querying by revision identifier returns the most recent revision
  for the corresponding page, rather than the requested revision
* (bug 8772) Filter page revision queries by user
* (bug 9927) User contributions queries do not accept IP addresses
* Watchlist now reports a proper feed item when the user is not logged in
* Watchlist date bug fixed - automatically shows one last day

== Maintenance script changes since 1.10 ==

* Add support for wgMaxTocLevel option in parserTests
* (bug 6823) dumpHTML: explicitly disable article view counter

== Languages updated since 1.10 ==

* Arabic (ar)
* Catalan (ca)
* German (de)
* Spanish (es)
* Farsi (fa)
* Finnish (fi)
* French (fr)
* Hebrew (he)
* Indonesian (id)
* Italian (it)
* Japanese (ja)
* Kabyle (kab)
* Kazakh (kk)
* Kurdish (ku)
* Lithuanian (lt)
* Norwegian (no)
* Polish (pl)
* Russian (ru)
* Somali (so)
* Sundanese (su)
* Swedish (sv)
* Chinese (PRC) (zh-cn)
* Chinese (Taiwan) (zh-tw)
* Cantonese (zh-yue)

== Compatibility ==

MediaWiki 1.11 requires PHP 5 (5.1 recommended). PHP 4 is no longer supported.

PHP 5.0.x fails on 64-bit systems due to serious bugs with array processing:
http://bugs.php.net/bug.php?id=34879
Upgrade affected systems to PHP 5.1 or higher.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.11 has several database changes since 1.10, and will not work without schema
updates.
